Feature: Rewrote communication between the backend and the engine, Implemented a custom class loader to load agent's into the code base